<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">


        <ImageButton
            android:id="@+id/grocery_list_button"
            android:layout_width="400dp"
            android:layout_height="142dp"
            android:contentDescription="@string/grocery_list_description"
            android:src="@drawable/list" />

    <ImageButton
        android:id="@+id/pantry_button"
        android:layout_width="400dp"
        android:layout_height="142dp"
        android:contentDescription="@string/pantry_description"
        android:src="@drawable/groceries" />

    <ImageButton
        android:id="@+id/recipe_book_button"
        android:layout_width="400dp"
        android:layout_height="142dp"
        android:contentDescription="@string/recipe_book_description"
        android:src="@drawable/recipe" />

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="400dp"
        android:layout_height="142dp"
        android:contentDescription="@string/calender_description"
        android:src="@drawable/calendar" />

</LinearLayout>
